# openwellness

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  docker-compose.yml
backend/api/: README.md  pyproject.toml
backend/api/src/openwellness_api/: __init__.py  config.py  container.py  main.py  v1.py
backend/api/src/openwellness_api/auth/: __init__.py  email_sender.py  errors.py  otp_store.py  router.py  schemas.py  service.py  session_store.py  token_service.py
backend/api/src/openwellness_api/common/: __init__.py  filter.py  handlers.py  pagination.py  resource_name.py  time_range.py  timestamps.py
backend/api/src/openwellness_api/errors/: __init__.py  handlers.py  responses.py
backend/api/src/openwellness_api/resources/: __init__.py  actigraph_record.py  admin.py  app.py  asset.py  card.py  condition.py  conversation.py  cpap_session.py  daily_state.py  device.py  fitbit.py  fitbit_heart_record.py  fitbit_record.py  fitbit_sleep.py  fitbit_sleep_session.py  fitbit_weight.py  goal.py  job_rule.py  message.py  message_draft.py  meta_data.py  participant.py  participant_group.py  physical_activity.py  post.py  session.py  shared_goal_progress.py  study.py  study_message.py  study_settings.py  survey_result.py  user.py  user_food.py  user_settings.py  user_sleep.py  user_stress.py  weight.py
backend/api/src/openwellness_api/schemas/: __init__.py  _base.py  actigraph_record.py  admin.py  app.py  asset.py  card.py  condition.py  conversation.py  cpap_session.py  daily_state.py  device.py  fitbit.py  fitbit_heart_record.py  fitbit_record.py  fitbit_sleep.py  fitbit_sleep_session.py  fitbit_weight.py  goal.py  job_rule.py  message.py  message_draft.py  meta_data.py  participant.py  participant_group.py  physical_activity.py  post.py  session.py  shared_goal_progress.py  study.py  study_message.py  study_settings.py  survey_result.py  user.py  user_food.py  user_settings.py  user_sleep.py  user_stress.py  weight.py
backend/api/tests/: conftest.py  test_app_config.py  test_auth_api.py  test_auth_container.py  test_auth_router_smoke.py  test_auth_service.py  test_email_sender.py  test_error_mapping.py  test_filter.py  test_goals_carveout.py  test_otp_store.py  test_pagination.py  test_principal.py  test_schemas.py  test_session_store.py  test_token_service.py  test_users_crud.py  test_weights_owner_crud.py
backend/core/: README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/core/alembic/: env.py
backend/core/alembic/versions/: 0001_initial.py
backend/core/scripts/: check_no_fstring_n1ql.py
backend/core/src/openwellness_core/adapters/: exceptions.py
backend/core/src/openwellness_core/adapters/interfaces/: __init__.py  entity_repository.py  mongo_collection_repository.py
backend/core/src/openwellness_core/application/: exceptions.py
backend/core/src/openwellness_core/application/dtos/: activity_data_dto.py
backend/core/src/openwellness_core/application/repositories/: __init__.py  actigraph_record_repository.py  admin_repository.py  app_repository.py  asset_repository.py  base_crud_repository.py  card_repository.py  condition_repository.py  conversation_repository.py  cpap_session_repository.py  daily_state_repository.py  device_repository.py  fetchable_by_study_repository.py  fitbit_heart_record_repository.py  fitbit_record_repository.py  fitbit_repository.py  (+26 more)
backend/core/tests/: test_repositories_queries.py  test_smoke.py  test_user_verified_id.py
backend/core/tests/adapters/postgres/: test_pg_base_repository.py
backend/core/tests/infrastructure/config/: test_settings.py
backend/core/tests/infrastructure/drivers/: test_cb_entity_repository.py  test_mdb_collection_repository.py  test_pg_engine.py
backend/core/tests/integration/: test_pg_migration_smoke.py
backend/scheduler/: README.md  pyproject.toml
backend/scheduler/src/openwellness_scheduler/: __init__.py  config.py  container.py
backend/scheduler/src/openwellness_scheduler/application/: __init__.py
backend/scheduler/src/openwellness_scheduler/infrastructure/: __init__.py  celery_app.py  tasks.py
backend/scheduler/tests/: conftest.py  test_app_config.py  test_count_study_participants.py  test_tasks.py
(+357 files in other folders)
