[project]
name = "openwellness-api"
version = "0.1.0"
description = "FastAPI service exposing OpenWellness core entities as AIP-style REST resources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openwellness-core",
    "dependency-injector>=4.41",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openwellness_api"]

[tool.uv.sources]
openwellness-core = { workspace = true }
