[project]
name = "openwellness-core"
version = "0.1.0"
description = "Shared domain models, repository interfaces, and persistence adapters for OpenWellness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3",
    "couchbase>=4.2",
    "dependency-injector>=4.41",
    "pydantic>=2.7",
    "pymongo>=4.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openwellness_core"]
