[project]
name = "openwellness-scheduler"
version = "0.1.0"
description = "Celery workers (and beat) for OpenWellness scheduled tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openwellness_scheduler"]
