[project]
name = "openwellness-scheduler"
version = "0.1.0"
description = "Celery workers (and beat) for OpenWellness scheduled tasks."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "openwellness-core",
    "celery>=5.4",
    "dependency-injector>=4.41",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openwellness_scheduler"]

[tool.uv.sources]
openwellness-core = { workspace = true }
